testdata/baselines/reference/compiler/selfReferenceInMethodBody.errors.txt
selfReferenceInMethodBody.ts(5,15): error TS2322: Type 'Box<Box<Box<number>>>' is not assignable to type 'Box<Box<Box<string>>>'.
  Type 'Box<Box<number>>' is not assignable to type 'Box<Box<string>>'.
    Type 'Box<number>' is not assignable to type 'Box<string>'.
      Type 'number' is not assignable to type 'string'.


==== selfReferenceInMethodBody.ts (1 errors) ====
    class Box<T> {
        value!: T;
    
        method(source: Box<Box<Box<number>>>) {
            const target: Box<Box<Box<string>>> = source;
                  ~~~~~~
!!! error TS2322: Type 'Box<Box<Box<number>>>' is not assignable to type 'Box<Box<Box<string>>>'.
!!! error TS2322:   Type 'Box<Box<number>>' is not assignable to type 'Box<Box<string>>'.
!!! error TS2322:     Type 'Box<number>' is not assignable to type 'Box<string>'.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
        }
    }
    